# Assigment2_VisualComputing

./: CMakeLists.txt  README.md
shaders/: filters.frag
src/: main.cpp
